// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-1hq8kv9-0 gQdoHB ring-theme-background"
  />
</div>
`;

exports[`Circle should render as avatar 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-1hq8kv9-0 jAjozg ring-theme-background"
  />
</div>
`;

exports[`Circle should render as blank 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-1hq8kv9-0 gQdoHB ring-theme-background"
  />
</div>
`;

exports[`Circle should render extra-large 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-1hq8kv9-0 bBjpiS ring-theme-background"
  />
</div>
`;

exports[`Circle should render large 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-1hq8kv9-0 cuWdXR ring-theme-background"
  />
</div>
`;

exports[`Circle should render small 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-1hq8kv9-0 jEHdGe ring-theme-background"
  />
</div>
`;

exports[`Circle should render with content 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-1hq8kv9-0 jEHdGe ring-theme-background"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle should render with no shadow 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-1hq8kv9-0 jEHdGe ring-theme-background"
  />
</div>
`;
